light mode and dark mode support test fix #4

--- a/res/css/default.css
+++ b/res/css/default.css
@@ -1,6 +1,6 @@
 :root {
     --background-color: white;
-    --text-colour: #333333;
+    --text-color: #333333;
     --link-color: rgb(0, 125, 151);
     --visited-link-color: rgb(125, 49, 134);
   }
@@ -8,7 +8,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background-color: #121212;
-    --text: white;
+    --text-color: white;
     --link-color: rgb(0, 67, 98);;
     --visited-link-color: rgb(76, 0, 85);
   }
